--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   docker:
-    if: github.repository == 'psf/black'
+    if: github.repository == 'pszlazak/black'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,6 +39,15 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: pyfound/black:latest,pyfound/black:${{ env.GIT_TAG }}
+          
+      - name: Build and push latest_release tag
+        if: ${{ github.event_name == 'release' && github.event.action == 'created' }}
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: pyfound/black:latest_release
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
